Добавлена обработка запросов на отправку письма. Реализована обработка отложенных писем с использованием крон-задания. Также добавлена новая зависимость и также поправила тесты